--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -271,7 +271,7 @@ jobs:
         git_clone https://github.com/Carseason/openwrt-themedog && mv -n openwrt-themedog/luci/* ./;rm -rf openwrt-themedog
         git_clone https://github.com/Carseason/openwrt-app-actions Carseason && mv -n Carseason/applications/* ./;rm -rf Carseason
         # git_clone https://github.com/VergilGao/openwrt-sblite && mvdir openwrt-sblite
-        git clone https://github.com/Thaolga/luci-app-nekoclash -b neko --depth 1 nekoclash && mv nekoclash/luci-app-nekoclash ./;rm -rf nekoclash
+        git clone https://github.com/Thaolga/openwrt-nekobox -b nekobox --depth 1 && mv openwrt-nekobox/luci-app-nekobox ./;rm -rf openwrt-nekobox
         git_clone https://github.com/nosignals/openwrt-neko && mv openwrt-neko/luci-app-neko ./;rm -rf openwrt-neko
         ) &
         (
