--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -41,7 +41,7 @@ jobs:
     
     - name: Set git identity
       run : |
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
         sudo timedatectl set-timezone "Asia/Shanghai"
 
