--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -393,6 +393,7 @@ jobs:
         rm -rf luciapp/{luci-app-qbittorrent,luci-app-zerotier,luci-app-cpufreq,luci-app-e2guardian,luci-app-aliyundrive-fuse,luci-app-syncdial,luci-app-firewall}
         git_sparse_clone openwrt-23.05 "https://github.com/immortalwrt/luci" applications protocols/luci-proto-minieap protocols/luci-proto-quectel themes/luci-theme-argon
         mv -n luciapp/* applications/; rm -rf luciapp
+        git_sparse_clone master "https://github.com/immortalwrt/luci" applications/luci-app-filebrowser-go
 
         for ipk in $(ls -d applications/!(luci-app-rclone|luci-app-filebrowser|luci-app-firewall)/); do
         	if [[ $(ls $ipk/po | wc -l) -gt 4 ]]; then
