--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -334,6 +334,14 @@ jobs:
         git_clone https://github.com/sbwml/luci-app-openai opai && mvdir opai
         # git_clone https://github.com/0x676e67/luci-app-wireguard-ui wireguardui && mvdir wireguardui
         ) &
+         (
+        git_clone https://github.com/bobbyunknown/luci-app-syscontrol
+        git_clone https://github.com/bobbyunknown/luci-app-insomclash
+        git_clone https://github.com/bobbyunknown/luci-app-tinyfm
+        git_clone https://github.com/hudra0/qosmate
+        git_clone https://github.com/hudra0/luci-app-qosmate
+        git_clone https://github.com/nbtca/luci-app-nbtverify
+        ) &
         (
         git_sparse_clone master "https://github.com/QiuSimons/OpenWrt-Add" luci-app-irqbalance
         git_sparse_clone main "https://github.com/lucikap/Brukamen" luci-app-ua2f
