--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -338,8 +338,7 @@ jobs:
         git_clone https://github.com/bobbyunknown/luci-app-syscontrol
         git_clone https://github.com/bobbyunknown/luci-app-insomclash
         git_clone https://github.com/muink/luci-app-ssrust
-        git_clone https://github.com/hudra0/qosmate
-        git_clone https://github.com/JohnsonRan/luci-app-qosmate
+        git_clone https://github.com/JohnsonRan/openwrt-qosmate && mvdir openwrt-qosmate
         ) &
         (
         git_sparse_clone master "https://github.com/QiuSimons/OpenWrt-Add" luci-app-irqbalance
