--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -232,6 +232,8 @@ jobs:
         (
         git clone https://github.com/sirpdboy/luci-theme-kucat -b js --depth 1
         git_clone https://github.com/QiuSimons/luci-app-daed-next daed1 && mvdir daed1
+        git_clone https://github.com/EkkoG/luci-app-natmap
+        git_clone https://github.com/EkkoG/openwrt-natmap
         git_clone https://github.com/sirpdboy/luci-app-netdata
         git_clone https://github.com/sirpdboy/luci-app-chatgpt-web
         git_clone https://github.com/sirpdboy/luci-app-eqosplus
