--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -383,7 +383,7 @@ jobs:
         git_sparse_clone develop "https://github.com/Ysurac/openmptcprouter-feeds" luci-app-snmpd \
         luci-app-packet-capture luci-app-mail msmtp luci-app-iperf atinout
         git_sparse_clone master "https://github.com/xiaoqingfengATGH/feeds-xiaoqingfeng" homeredirect luci-app-homeredirect
-        git_sparse_clone master "https://github.com/immortalwrt/immortalwrt" \
+        git_sparse_clone openwrt-24.10 "https://github.com/immortalwrt/immortalwrt" \
         package/kernel/rtl8189es package/emortal/autocore package/emortal/automount \
         package/network/utils/fullconenat package/emortal/cpufreq package/network/utils/fullconenat-nft package/network/utils/nftables \
         package/network/config/firewall package/network/config/firewall4 package/system/fstools \
