--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -360,7 +360,7 @@ jobs:
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/openwrt" \
         package/base-files package/system/opkg package/network/services/ppp \
         package/network/services/dnsmasq package/network/config/wifi-scripts
-        git_sparse_clone openwrt-24.10 "https://github.com/openwrt/luci" applications/luci-app-attendedsysupgrade applications/luci-app-aria2 \
+        git_sparse_clone openwrt-24.10 "https://github.com/openwrt/luci" applications/luci-app-aria2 \
         applications/luci-app-ddns applications/luci-app-acme applications/luci-app-package-manager \
         applications/luci-app-ksmbd applications/luci-app-samba4 applications/luci-app-watchcat applications/luci-app-upnp \
         applications/luci-app-transmission modules/luci-base modules/luci-mod-network \
