--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -259,6 +259,7 @@ jobs:
         git_clone https://github.com/muink/luci-app-tn-netports
         git_clone https://github.com/muink/openwrt-go-stun
         git_clone https://github.com/muink/luci-app-tinyfilemanager
+        git_clone https://github.com/muink/openwrt-Toolkit
         ) &
         (
         git_clone https://github.com/gSpotx2f/luci-app-temp-status
