--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -343,6 +343,10 @@ jobs:
         # git_clone https://github.com/karen07/antiblock-openwrt-package
         # git_clone https://github.com/karen07/luci-app-antiblock-openwrt-package
         git_clone https://github.com/muink/luci-app-netdata
+        git_clone https://github.com/xptsp/luci-app-ympd
+        git_clone https://github.com/xptsp/openwrt-ympd
+        git_clone https://github.com/xptsp/openwrt-peanut
+        git_clone https://github.com/calfeche13/luci-app-public-ip-monitor
         ) &
         (
         git_sparse_clone master "https://github.com/QiuSimons/OpenWrt-Add" luci-app-irqbalance
