--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -387,7 +387,7 @@ jobs:
         ) &
         (
         git_sparse_clone develop "https://github.com/Ysurac/openmptcprouter-feeds" \
-        luci-app-packet-capture luci-app-mail msmtp luci-app-iperf atinout
+        luci-app-packet-capture luci-app-iperf atinout
         git_sparse_clone master "https://github.com/xiaoqingfengATGH/feeds-xiaoqingfeng" homeredirect luci-app-homeredirect
         git_sparse_clone openwrt-24.10 "https://github.com/immortalwrt/immortalwrt" \
         package/kernel/rtl8189es package/emortal/autocore package/emortal/automount \
