--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -354,7 +354,7 @@ jobs:
         net/qBittorrent-static net/phtunnel net/frp net/headscale \
         net/uugamebooster net/verysync net/vlmcsd net/dnsforwarder net/tcpping net/netatalk net/pgyvpn
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/packages" \
-        utils/coremark utils/watchcat utils/dockerd utils/cgroupfs-mount net/uwsgi net/miniupnpd net/p910nd net/ddns-scripts net/curl \
+        utils/coremark utils/watchcat utils/dockerd utils/cgroupfs-mount net/uwsgi net/smartdns net/miniupnpd net/p910nd net/ddns-scripts net/curl \
         net/ariang net/tailscale
         ) &
         (
