--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -232,7 +232,7 @@ jobs:
         git_clone https://github.com/sirpdboy/luci-app-chatgpt-web
         git_clone https://github.com/sirpdboy/luci-app-eqosplus
         git_clone https://github.com/JiaY-shi/fancontrol fanc && mv fanc/{fancontrol,luci-app-fancontrol} ./;rm -rf fanc
-        git_clone https://github.com/Siriling/5G-Modem-Support && mvdir 5G-Modem-Support
+        git_clone https://github.com/Siriling/5G-Modem-Support && rm -rf 5G-Modem-Support/rooter && mvdir 5G-Modem-Support
         git_clone https://github.com/danchexiaoyang/luci-app-syncthing
         git_clone https://github.com/aa65535/openwrt-dist-luci
         git_clone https://github.com/morytyann/OpenWrt-msd && mvdir OpenWrt-msd
@@ -413,7 +413,7 @@ jobs:
         shopt -s extglob
         mv -n applications/!(luci-app-noddos|luci-app-openvpn-server|luci-app-kodexplorer|luci-app-cshark|luci-app-dnscrypt-proxy|luci-app-https-dns-proxy|luci-app-ssr-mudb-server|luci-app-ledtrig-*) ./ ; rm -Rf applications
         mv -n lean/!(r8101|r8125|r8126|r8168) ./ ; rm -Rf lean
-        cp -rf wwan/*/* ./ ; rm -Rf wwan
+        mv -f wwan/*/* ./ ; rm -Rf wwan
         mv -n liep/* ./ ; rm -Rf liep
         mv -n openwrt-app-actions/applications/* ./;rm -rf openwrt-app-actions
         rm -Rf */.git
