--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -355,7 +355,7 @@ jobs:
         net/uugamebooster net/verysync net/vlmcsd net/dnsforwarder net/tcpping net/netatalk net/pgyvpn
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/packages" \
         utils/coremark utils/watchcat utils/dockerd utils/cgroupfs-mount net/uwsgi net/smartdns net/miniupnpd net/p910nd net/ddns-scripts \
-        net/ariang net/tailscale net/frp
+        net/ariang net/tailscale
         ) &
         (
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/luci" applications/luci-app-aria2 \
