--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -363,7 +363,7 @@ jobs:
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/luci" applications/luci-app-aria2 \
         applications/luci-app-ddns applications/luci-app-package-manager \
         applications/luci-app-ksmbd applications/luci-app-samba4 applications/luci-app-watchcat applications/luci-app-upnp \
-        applications/luci-app-transmission applications/luci-app-filemanager
+        applications/luci-app-transmission
         ) &
 
         (
@@ -443,7 +443,6 @@ jobs:
         -e "s/killall \([^-]+*\)/killall -3 \1/g" \
         `find \( -path "*/files/root/etc/init.d/*" -o -path "*/root/etc/init.d/*" -o -path "*/files/*.init" \) -type f` &
         wget https://github.com/xiechangan123/luci-i18n-xray-zh-cn/raw/main/po/zh-cn/xray.zh-cn.po -P luci-app-xray/po/zh_Hans/
-        wget https://github.com/sbwml/luci-app-filemanager/raw/refs/heads/main/po/zh_Hans/filemanager.po -P luci-app-filemanager/po/zh_Hans/
         (
         function latest() {
           (curl -gs -H 'Content-Type: application/json' \
