--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -168,6 +168,7 @@ jobs:
         git_clone https://github.com/ykxVK8yL5L/pikpak-webdav pikpak && mv -n pikpak/openwrt/* ./;rm -rf pikpak
         git_clone https://github.com/jjm2473/openwrt-apps && rm -rf openwrt-apps/{luci-app-cpufreq,luci-app-ota,luci-alias.mk} && sed -i "s/luci-alias.mk/..\/luci.mk/" openwrt-apps/*/Makefile && mvdir openwrt-apps
         git_clone https://github.com/UnblockNeteaseMusic/luci-app-unblockneteasemusic
+        git_clone https://github.com/lwb1978/openwrt-gecoosac && mvdir openwrt-gecoosac
         ) &
         (
         git_clone https://github.com/tty228/luci-app-wechatpush
