--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -409,6 +409,7 @@ jobs:
     - name: Delete duplicated packages
       run: |
         shopt -s extglob
+        set +e
         mv -n applications/!(luci-app-noddos|luci-app-openvpn-server|luci-app-kodexplorer|luci-app-cshark|luci-app-dnscrypt-proxy|luci-app-https-dns-proxy|luci-app-ssr-mudb-server|luci-app-ledtrig-*) ./ ; rm -Rf applications
         mv -n lean/!(r8101|r8125|r8126|r8168) ./ ; rm -Rf lean
         mv -n liep/* ./ ; rm -Rf liep
