--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -177,7 +177,8 @@ jobs:
         git_clone https://github.com/ZeaKyX/luci-app-speedtest-web
         git_clone https://github.com/jhonathanc/ps3netsrv-openwrt && mv -n ps3netsrv-openwrt/* ./;rm -rf ps3netsrv-openwrt
         git_clone https://github.com/linkease/openwrt-app-actions
-        git_clone https://github.com/lucikap/luci-app-brukamen && mv -n luci-app-brukamen/{luci*,mentohust,iii/*} ./;rm -rf luci-app-brukamen luci-app-autoshell_*.ipk luci-app-suselogin
+        git_clone https://github.com/Wulnut/luci-app-suselogin
+        git_clone https://github.com/lucikap/luci-app-brukamen && mv -n luci-app-brukamen/{luci*,mentohust,iii/*} ./;rm -rf luci-app-brukamen luci-app-autoshell_*.ipk
         git_clone https://github.com/mchome/openwrt-dogcom
         git_clone https://github.com/yichya/luci-app-xray yichya && mv -f yichya/status ./luci-app-xray-status;mv -f yichya/core ./luci-app-xray;rm -rf yichya
         git_clone https://github.com/rafmilecki/luci-app-xjay
@@ -327,7 +328,6 @@ jobs:
         git_clone https://github.com/danielaskdd/luci-app-smartvpn
         git_clone https://github.com/hequan2017/luci-app-forcedata
         git_clone https://github.com/sbwml/luci-app-openai opai && mvdir opai
-        git_clone https://github.com/Wulnut/luci-app-suselogin
         ) &
         (
         git_clone https://github.com/kiddin9/luci-app-syscontrol
