--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -330,7 +330,7 @@ jobs:
         ) &
         (
         git_clone https://github.com/kiddin9/luci-app-syscontrol
-        git_clone https://github.com/bobbyunknown/luci-app-insomclash
+        # git_clone https://github.com/bobbyunknown/luci-app-insomclash
         git_clone https://github.com/muink/luci-app-ssrust
         git_clone https://github.com/hudra0/qosmate
         git_clone https://github.com/kiddin9/luci-app-qosmate
