--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -341,6 +341,8 @@ jobs:
         git_clone https://github.com/xptsp/openwrt-ympd
         git_clone https://github.com/xptsp/openwrt-peanut
         git_clone https://github.com/calfeche13/luci-app-public-ip-monitor
+        git_clone https://github.com/miaoermua/luci-app-leigod-acc leigod-acc1 && mvdir leigod-acc1
+        git_clone https://github.com/vison-v/luci-app-nginx-proxy
         ) &
         (
         git_sparse_clone master "https://github.com/QiuSimons/OpenWrt-Add" luci-app-irqbalance
