--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -352,7 +352,7 @@ jobs:
         git_sparse_clone master "https://github.com/coolsnowwolf/packages" multimedia/UnblockNeteaseMusic-Go \
         multimedia/UnblockNeteaseMusic net/antileech net/go-aliyundrive-webdav \
         net/qBittorrent-static net/phtunnel net/headscale \
-        net/uugamebooster net/pgyvpn
+        net/uugamebooster net/pgyvpn ‎sound/forked-daapd
         ) &
         (
         git_sparse_clone openwrt-24.10 "https://github.com/openwrt/packages" \
